--- a/src/app/features/lms/grp/components/dashboard/components/landing-dashboard/landing-dashboard.component.html
+++ b/src/app/features/lms/grp/components/dashboard/components/landing-dashboard/landing-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<!-- <div class="main">
     <div class="container">
         <div style="width: 100%; margin-bottom: 20px;">
             <span class="dashboard-title">My dashboard</span>
@@ -49,4 +49,111 @@
         
     </div>
 </div>
+ -->
 
+ <div class="main">
+    <div class="container">
+        <div class="profile">
+            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+            </svg>
+        </div>
+    
+        <div class="info">
+            <div>
+                <label class="label-name" for="name">Name:</label>
+                <span class="label-desc" id="name">Johnanesburg Doedino</span>
+            </div>
+    
+            <div>
+                <label class="label-name" for="national-id">National ID:</label>
+                <span class="label-desc" id="national-id">1234567890</span>
+            </div>
+
+            <div>
+                <label class="label-name" for="phone">Phone number:</label>
+                <span class="label-desc" id="phone">123-456-7890</span>
+            </div>
+    
+            <div>
+                <label class="label-name" for="email">Email:</label>
+                <span class="label-desc" id="email">Johnanesburg@example.com</span>
+            </div>
+    
+        </div>
+    </div>
+    
+
+    <div class="dashboard">Dashboard</div>
+    <div class="container2">
+        <div class="title"><span id="title">Policies</span></div>
+        <div class="box">
+            <label class="active-label">Active</label>
+            <table>
+                <tr>
+                    <td>Policy:</td>
+                    <td class="td-data">PensionPensionPension</td>
+                </tr>
+                <tr>
+                    <td>Policy number:</td>
+                    <td class="td-data">dsffghg7</td>
+                </tr>
+                <tr>
+                    <td>Member number:</td>
+                    <td class="td-data">97865</td>
+                </tr>
+                <tr>
+                    <td>Fund value:</td>
+                    <td class="td-data">976875</td>
+                </tr>
+            </table>
+        </div>
+        
+
+        <div class="box">
+            <label class="active-label">Active</label>
+            <table>
+                <tr>
+                    <td>Policy:</td>
+                    <td class="td-data">PensionPensionPension</td>
+                </tr>
+                <tr>
+                    <td>Policy number:</td>
+                    <td class="td-data">dsffghg7</td>
+                </tr>
+                <tr>
+                    <td>Member number:</td>
+                    <td class="td-data">97865</td>
+                </tr>
+                <tr>
+                    <td>Fund value:</td>
+                    <td class="td-data">976875</td>
+                </tr>
+            </table>
+        </div>
+        
+        <div class="box">
+            <label class="active-label">Active</label>
+            <table>
+                <tr>
+                    <td>Policy:</td>
+                    <td class="td-data">PensionPensionPension</td>
+                </tr>
+                <tr>
+                    <td>Policy number:</td>
+                    <td class="td-data">dsffghg7</td>
+                </tr>
+                <tr>
+                    <td>Member number:</td>
+                    <td class="td-data">97865</td>
+                </tr>
+                <tr>
+                    <td>Fund value:</td>
+                    <td class="td-data">976875</td>
+                </tr>
+            </table>
+        </div>
+        
+    </div>
+</div>
