--- a/src/app/features/crm/components/client-type/client-type.component.html
+++ b/src/app/features/crm/components/client-type/client-type.component.html
@@ -13,7 +13,17 @@
         </div>
         <div class="card-body">
           <div class="row mb-3">
-            <div class="col-sm-4 col-6">
+            <div class="col-sm-3 col-4">
+              <select
+                class="form-select"
+                (change)="onSort($event, clientTypeData, 'clientTypeName')"
+              >
+                <option value="">Sorting Options</option>
+                <option value="asc">Ascending</option>
+                <option value="desc">Descending</option>
+              </select>
+            </div>
+            <div class="col-sm-3 col-4">
               <input
                 type="text"
                 class="form-control"
@@ -23,7 +33,7 @@
                 (input)="filterClientType($event)"
               />
             </div>
-            <div class="col-sm-8 col-6">
+            <div class="col-sm-6 col-4">
               <div class="float-end">
                 <span class="icon-circle"
                   ><i
