--- a/src/app/features/crm/components/division/division.component.html
+++ b/src/app/features/crm/components/division/division.component.html
@@ -39,7 +39,27 @@
       </div>
       <div class="card-body">
         <div class="row mb-3">
-          <div class="col-12">
+          <div class="col-sm-4">
+            <select
+              class="form-select"
+              (change)="onSort($event, divisionData, 'name')"
+            >
+              <option value="">Sorting Options</option>
+              <option value="asc">Ascending</option>
+              <option value="desc">Descending</option>
+            </select>
+          </div>
+          <div class="col-sm-4">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Search by name"
+              aria-label="search"
+              aria-describedby="search"
+              (input)="filterDivision($event)"
+            />
+          </div>
+          <div class="col-sm-4">
             <div class="float-end">
               <span class="icon-circle"
                 ><i class="fa-solid fa-plus" (click)="openDivisionModal()"></i
@@ -59,12 +79,14 @@
         <div class="row mb-5">
           <div class="col-12">
             <p-table
+              #divisionTable
               [value]="divisionData"
               styleClass="p-datatable-sm"
               responsiveLayout="scroll"
               [scrollable]="true"
               scrollHeight="400px"
               class="ui-datatable"
+              [globalFilterFields]="['name']"
             >
               <ng-template pTemplate="header">
                 <tr>
@@ -124,7 +146,17 @@
       </div>
       <div class="card-body">
         <div class="row mb-3">
-          <div class="form-group col-4">
+          <div class="col-sm-4">
+            <select
+              class="form-select"
+              (change)="onSort($event, divisionBranchData, 'name')"
+            >
+              <option value="">Sorting Options</option>
+              <option value="asc">Ascending</option>
+              <option value="desc">Descending</option>
+            </select>
+          </div>
+          <div class="col-sm-4">
             <input
               type="text"
               class="form-control"
@@ -133,7 +165,7 @@
               aria-describedby="search"
             />
           </div>
-          <label for="filterBy" class="col-1 col-form-label">Filter by:</label>
+          <!-- <label for="filterBy" class="col-1 col-form-label">Filter by:</label>
           <div class="form-group col-3">
             <input
               type="text"
@@ -143,8 +175,8 @@
               onfocus="(this.type='date')"
               onblur="(this.type='text')"
             />
-          </div>
-          <div class="col-4">
+          </div> -->
+          <div class="col-sm-4">
             <div class="float-end">
               <span class="icon-circle"><i class="pi pi-pencil"></i></span>
             </div>
