--- a/src/app/features/crm/components/required-documents/required-documents.component.html
+++ b/src/app/features/crm/components/required-documents/required-documents.component.html
@@ -12,7 +12,17 @@
           </div>
           <div class="card-body">
             <div class="row mb-3">
-              <div class="col-6">
+              <div class="col-sm-4 col-4">
+                <select
+                  class="form-select"
+                  (change)="onSort($event, documentsData, 'description')"
+                >
+                  <option value="">Sorting Options</option>
+                  <option value="asc">Ascending</option>
+                  <option value="desc">Descending</option>
+                </select>
+              </div>
+              <div class="col-sm-4 col-4">
                 <input
                   type="text"
                   class="form-control"
@@ -22,7 +32,7 @@
                   (input)="filterDocuments($event)"
                 />
               </div>
-              <div class="col-6">
+              <div class="col-sm-4 col-4">
                 <div class="float-end">
                   <span class="icon-circle"
                     ><i
@@ -92,7 +102,17 @@
           </div>
           <div class="card-body">
             <div class="row mb-3">
-              <div class="col-6">
+              <div class="col-sm-4 col-4">
+                <select
+                  class="form-select"
+                  (change)="onSort($event, AssignDocumentData, 'accountType')"
+                >
+                  <option value="">Sorting Options</option>
+                  <option value="asc">Ascending</option>
+                  <option value="desc">Descending</option>
+                </select>
+              </div>
+              <div class="col-sm-4 col-4">
                 <input
                   type="text"
                   class="form-control"
@@ -102,7 +122,7 @@
                   (input)="filterAssignDocuments($event)"
                 />
               </div>
-              <div class="col-6">
+              <div class="col-sm-4 col-4">
                 <div class="float-end">
                   <span class="icon-circle"
                     ><i
