--- a/src/app/features/crm/components/sector-occupation/sector-occupation.component.html
+++ b/src/app/features/crm/components/sector-occupation/sector-occupation.component.html
@@ -12,7 +12,17 @@
           </div>
           <div class="card-body">
             <div class="row mb-3">
-              <div class="col-sm-6 col-6">
+              <div class="col-sm-4 col-4">
+                <select
+                  class="form-select"
+                  (change)="onSort($event, sectorsData, 'name')"
+                >
+                  <option value="">Sorting Options</option>
+                  <option value="asc">Ascending</option>
+                  <option value="desc">Descending</option>
+                </select>
+              </div>
+              <div class="col-sm-4 col-4">
                 <input
                   type="text"
                   class="form-control"
@@ -22,7 +32,7 @@
                   (input)="filterSectors($event)"
                 />
               </div>
-              <div class="col-sm-6 col-6">
+              <div class="col-sm-4 col-4">
                 <div class="float-end">
                   <span class="icon-circle"
                     ><i class="fa-solid fa-plus" (click)="openSectorModal()"></i
@@ -91,7 +101,17 @@
           </div>
           <div class="card-body">
             <div class="row mb-3">
-              <div class="col-sm-6 col-6">
+              <div class="col-sm-4 col-4">
+                <select
+                  class="form-select"
+                  (change)="onSort($event, occupationsData, 'name')"
+                >
+                  <option value="">Sorting Options</option>
+                  <option value="asc">Ascending</option>
+                  <option value="desc">Descending</option>
+                </select>
+              </div>
+              <div class="col-sm-4 col-4">
                 <input
                   type="text"
                   class="form-control"
@@ -101,7 +121,7 @@
                   (input)="filterOccupations($event)"
                 />
               </div>
-              <div class="col-sm-6 col-6">
+              <div class="col-sm-4 col-4">
                 <div class="float-end">
                   <span class="icon-circle"
                     ><i
